tests/fixtures/precompile/positive/K0206-DuplicateDeclaration/2.kt
// EXPECTED-KOTLINC-ERROR: REDECLARATION
// Two top-level classes with identical name.
class Holder(val n: Int)

class Holder(val s: String)
